--- a/cart.html
+++ b/cart.html
@@ -74,8 +74,9 @@ body {
   width: 100px;
   height: 100px;
   border-radius: 10px;
-  object-fit: cover;
+  object-fit: contain;
   border: 1px solid #ccc;
+  background-color: #fff;
 }
 
 .item-details {
